--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,3 +13,8 @@
        show = diff-so-fancy | less --tabs=1,5 -RFX
 [alias]
 	pool = "!sh -c 'echo "chilling in the pool"'"
+[core]
+    attributesfile = ~/.gitattributes
+[merge "json"]
+    name = custom merge driver for json files
+    driver = git-json-merge %A %O %B
