--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ pages:
   before_script:
     - pacman -Syu --noconfirm
     - yes | pip3 install markdown || true
+    - yes | pip3 install click || true
   script:
     - mkdir public
     - ./nvim/.config/nvim/lit.py ./nvim/.config/nvim/src public
