run web on lit.py
Former-commit-id: 087f9f48ae8dca8fce2cfd5f299ec2652cdb02c9 [formerly d912e43b4c253c10c0ee3c76613df0d9182d3f3a]
Former-commit-id: 8b42e16677869c2d79d3824113126d5a65f70ce9

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ pages:
     - yes | pip3 install loguru || true
   script:
     - mkdir public
-    - ./nvim/.config/nvim/lit.py ./nvim/.config/nvim/src public
+    - ./nvim/.config/nvim/lit.py web ./nvim/.config/nvim/src public
   artifacts:
     paths:
     - public
