--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ pages:
   script:
     - mkdir public
     - ./nvim/.config/nvim/lit.py web ./nvim/.config/nvim/src public
+    - cp nvim/.config/nvim/public/*.css public
   artifacts:
     paths:
     - public
