--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 #new-session -n $HOST
 
-unbind C-b
-set -g prefix C-o
-bind C-o send-prefix
+#"unbind C-b
+#"set -g prefix C-o
+#"bind C-o send-prefix
 
 
 #set-window-option -g mode-keys vi
@@ -35,6 +35,16 @@ set -g history-limit 10000
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection 'primary'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-processes ':all:'
+
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
