nvim: update literate config pipeline
Former-commit-id: 72817fc4cf3a51812ec52f7656ed94f1d5350dc9 [formerly a38046dbccd73a67fb22f869c654d685fe90b1fc]
Former-commit-id: 05b973fa6c9d594c0778592885b61285efe1530f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,11 @@ pages:
     - yes | pip3 install markdown || true
     - yes | pip3 install click || true
     - yes | pip3 install loguru || true
+    - yes | pip3 install literate-vim || true
   script:
     - mkdir public
-    - ./nvim/.config/nvim/lit.py web ./nvim/.config/nvim/src public
-    - cp nvim/.config/nvim/html/*.css public
+    - make -C nvim/.config/nvim
+    - cp -r nvim/.config/nvim/html public
   artifacts:
     paths:
     - public
