--- a/nvim/.config/nvim/Makefile
+++ b/nvim/.config/nvim/Makefile
@@ -1,3 +1,8 @@
 make:
-	literate_vim web src out
+	mkdir -p html
+	literate_vim web src html
+	rm -rf html/*.tmp
 	literate_vim weave src .
+
+clean:
+	rm -rf html/*.html
