--- a/i3/.config/i3/configs/Makefile
+++ b/i3/.config/i3/configs/Makefile
@@ -1,5 +1,6 @@
-config=dark_config.i3
+config=wall_config.i3
 make:
 	cat light.i3 template.i3 > light_config.i3
 	cat dark.i3 template.i3 > dark_config.i3
+	cat wall.i3 template.i3 > wall_config.i3
 	cp $(config) ../config
