--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -96,20 +96,20 @@
 # cache settings
 #
 # Use a large seekable RAM cache even for local input.
-#cache=yes
+cache=yes
 #
 # Use extra large RAM cache (needs cache=yes to make it useful).
-#demuxer-max-bytes=500M
-#demuxer-max-back-bytes=100M
+demuxer-max-bytes=5000M
+demuxer-max-back-bytes=1000M
 #
 # Disable the behavior that the player will pause if the cache goes below a
 # certain fill size.
-#cache-pause=no
+cache-pause=no
 #
 # Store cache payload on the hard disk instead of in RAM. (This may negatively
 # impact performance unless used for slow input such as network.)
 #cache-dir=~/.cache/
-#cache-on-disk=yes
+cache-on-disk=yes
 
 # Display English subtitles if available.
 #slang=en
