Aftermath of xdg compliance
Former-commit-id: b4374cef96f884d858ebdbaf483995b55ca886d4 [formerly 110554cdfe648f79a7a65c4701e252d374bd73b4]
Former-commit-id: 3c525a7a43d317c4180a8e0ae92846a2065a1cc6

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -335,6 +335,8 @@ exec --no-startup-id nasa-wallpaper -a
 exec --no-startup-id thunderbird
 exec_always --no-startup-id picom
 exec_always --no-startup-id greenclip daemon
+exec_always --no-startup-id clipmenud &
+exec_always --no-startup-id /home/joaj/bin/layout.sh
 
 #no commands mode
 mode "no-command" {
