--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -5,8 +5,8 @@
 [commit]
 	gpgsign = true
 [pager]
-       diff = diff-so-fancy | less --tabs=1,5 -RFX
-       show = diff-so-fancy | less --tabs=1,5 -RFX
+       #diff = diff-so-fancy | less --tabs=1,5 -RFX
+       #show = diff-so-fancy | less --tabs=1,5 -RFX
 [alias]
 	pool = "!sh -c 'echo "chilling in the pool"'"
 [core]
