--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -106,8 +106,6 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 # toggle split
 bindsym $mod+e layout toggle split
-# toggle layouts
-bindsym $mod+t layout toggle
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -123,7 +121,6 @@ bindsym $mod+Shift+m exec "i3-msg sticky toggle; i3-msg floating enable; i3-msg 
 # small border
 #bindsym $mod+y border pixel 2
 # normal border
-bindsym $mod+n border normal
 
 # toggle floating
 bindsym $mod+space focus mode_toggle
@@ -132,7 +129,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+Shift+a focus child
 
 # cycle workspaces
 bindsym $mod+Tab workspace next
@@ -157,28 +154,28 @@ set $workspace10 "0"
 
 
 # switch to workspace
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace $workspace9
-bindsym $mod+0 workspace $workspace10
+#bindsym $mod+1 workspace $workspace1
+#bindsym $mod+2 workspace $workspace2
+#bindsym $mod+3 workspace $workspace3
+#bindsym $mod+4 workspace $workspace4
+#bindsym $mod+5 workspace $workspace5
+#bindsym $mod+6 workspace $workspace6
+#bindsym $mod+7 workspace $workspace7
+#bindsym $mod+8 workspace $workspace8
+#bindsym $mod+9 workspace $workspace9
+#bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace $workspace9
-bindsym $mod+Shift+0 move container to workspace $workspace10
+#bindsym $mod+Shift+1 move container to workspace $workspace1
+#bindsym $mod+Shift+2 move container to workspace $workspace2
+#bindsym $mod+Shift+3 move container to workspace $workspace3
+#bindsym $mod+Shift+4 move container to workspace $workspace4
+#bindsym $mod+Shift+5 move container to workspace $workspace5
+#bindsym $mod+Shift+6 move container to workspace $workspace6
+#bindsym $mod+Shift+7 move container to workspace $workspace7
+#bindsym $mod+Shift+8 move container to workspace $workspace8
+#bindsym $mod+Shift+9 move container to workspace $workspace9
+#bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # reload configuration
 bindsym $mod+Shift+c reload
@@ -280,11 +277,6 @@ bindsym $mod+Shift+b exec rofi -modi "clipboard:greenclip print" -show clipboard
 # lauch hotkeys
 bindsym $mod+i exec /home/joaj/bin/hotkeys
 
-# move to scratchpad
-#bindsym $mod+Shift+minus move scratchpad
-# show scratchpad
-#bindsym $mod+minus scratchpad show
-
 # workspace assignments
 assign [class="^Chromium$"]			$workspace10
 assign [class="Brave-browser$"]			$workspace10
@@ -358,10 +350,6 @@ client.urgent           $urgent-bg-color  $urgent-bg-color  $text-color  $urgent
 bindsym $mod+p exec rofi-pass
 # launch rofi
 bindsym $mod+d exec rofi -modi drun -show drun 
-# launch clipmenu
-bindsym $mod+g exec clipmenu
-# launch qmenu_hud
-bindsym $mod+o exec fullscreen disable; floating enable; resize set 422 240; sticky enable; move position 870 25
 # launch window switcher
 bindsym $mod+y exec rofi -combi-modi window -show combi -modi combi 
 # expo
@@ -370,32 +358,65 @@ bindsym $mod+z exec --no-startup-id flash_window
 bindsym $mod+Shift+y exec xdotool click 4
 bindsym $mod+Shift+u exec xdotool click 5
 
-bindsym $mod+m exec gst-launch-1.0 v4l2src device=/dev/video0 ! xvimagesink
+#workspace switcher
+set $exec_i3_groups exec --no-startup-id i3-workspace-groups
+
+# Switch active workspace group
+bindsym $mod+g exec --no-startup-id i3-switch-active-workspace-group
+
+# Assign workspace to a group
+bindsym $mod+Shift+g exec --no-startup-id i3-assign-workspace-to-group
+
+# Select workspace to focus on
+bindsym $mod+t exec --no-startup-id i3-focus-on-workspace
+
+# Move the focused container to another workspace
+bindsym $mod+Shift+t exec --no-startup-id i3-move-to-workspace
+
+# Rename/renumber workspace. Uses Super+Alt+n
+bindsym Mod1+Mod4+n exec --no-startup-id i3-rename-workspace
+
+bindsym $mod+1 $exec_i3_groups workspace-number 1
+bindsym $mod+2 $exec_i3_groups workspace-number 2
+bindsym $mod+3 $exec_i3_groups workspace-number 3
+bindsym $mod+4 $exec_i3_groups workspace-number 4
+bindsym $mod+5 $exec_i3_groups workspace-number 5
+bindsym $mod+6 $exec_i3_groups workspace-number 6
+bindsym $mod+7 $exec_i3_groups workspace-number 7
+bindsym $mod+8 $exec_i3_groups workspace-number 8
+bindsym $mod+9 $exec_i3_groups workspace-number 9
+bindsym $mod+0 $exec_i3_groups workspace-number 10
+
+bindsym $mod+Shift+1 $exec_i3_groups move-to-number 1
+bindsym $mod+Shift+2 $exec_i3_groups move-to-number 2
+bindsym $mod+Shift+3 $exec_i3_groups move-to-number 3
+bindsym $mod+Shift+4 $exec_i3_groups move-to-number 4
+bindsym $mod+Shift+5 $exec_i3_groups move-to-number 5
+bindsym $mod+Shift+6 $exec_i3_groups move-to-number 6
+bindsym $mod+Shift+7 $exec_i3_groups move-to-number 7
+bindsym $mod+Shift+8 $exec_i3_groups move-to-number 8
+bindsym $mod+Shift+9 $exec_i3_groups move-to-number 9
+bindsym $mod+Shift+0 $exec_i3_groups move-to-number 10
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    	#status_command py3status --config ~/.config/py3status/config --include ~/.config/py3status/bin/
-	#status_command py3status
-	#status_command i3status
-	#mode invisible
-	#status_command i3status-rs /home/joaj/build/i3status-rust/example_config.toml
-	#status_command i3status
-  #mode hide
-	status_command i3blocks
-  position top
-	font pango: Awesome 9
-    separator_symbol "•"
-    #height 25
-    colors {
-		statusline $text-color
-        background $bg-color
-        separator $accent
 
-        #                  border             background         text
-        focused_workspace  $accent            $accent            $text-color
-        inactive_workspace $bg-color          $bg-color          $inactive-text-color
-        urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+  	strip_workspace_numbers yes
+	status_command i3blocks
+	position top
+	font pango: Awesome 9
+	separator_symbol "•"
+    	#height 25
+    	colors {
+		statusline $text-color
+        	background $bg-color
+        	separator $accent
+
+        	#                  border             background         text
+        	focused_workspace  $accent            $accent            $text-color
+        	inactive_workspace $bg-color          $bg-color          $inactive-text-color
+        	urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
     }
 }
 # vim:filetype=i3config
