--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -86,7 +86,9 @@ $character"""
 
 # Replace the '❯' symbol in the prompt with '➜'
 [character] # The name of the module we are configuring is 'character'
-success_symbol = '[λ](bold red)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+success_symbol = '[λ](bold yellow)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+error_symbol = ''
+vimcmd_symbol = '[λ](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
 
 # Disable the package module, hiding it from the prompt completely
 [package]
@@ -98,3 +100,7 @@ disabled = false
 [directory]
 truncate_to_repo = false
 truncation_length = 10
+
+[status]
+disabled=false
+symbol="[ε](bold red) "
