--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -154,28 +154,28 @@ set $workspace10 "0"
 
 
 # switch to workspace
-#bindsym $mod+1 workspace $workspace1
-#bindsym $mod+2 workspace $workspace2
-#bindsym $mod+3 workspace $workspace3
-#bindsym $mod+4 workspace $workspace4
-#bindsym $mod+5 workspace $workspace5
-#bindsym $mod+6 workspace $workspace6
-#bindsym $mod+7 workspace $workspace7
-#bindsym $mod+8 workspace $workspace8
-#bindsym $mod+9 workspace $workspace9
-#bindsym $mod+0 workspace $workspace10
+bindsym $mod+1 workspace $workspace1
+bindsym $mod+2 workspace $workspace2
+bindsym $mod+3 workspace $workspace3
+bindsym $mod+4 workspace $workspace4
+bindsym $mod+5 workspace $workspace5
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
+bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
-#bindsym $mod+Shift+1 move container to workspace $workspace1
-#bindsym $mod+Shift+2 move container to workspace $workspace2
-#bindsym $mod+Shift+3 move container to workspace $workspace3
-#bindsym $mod+Shift+4 move container to workspace $workspace4
-#bindsym $mod+Shift+5 move container to workspace $workspace5
-#bindsym $mod+Shift+6 move container to workspace $workspace6
-#bindsym $mod+Shift+7 move container to workspace $workspace7
-#bindsym $mod+Shift+8 move container to workspace $workspace8
-#bindsym $mod+Shift+9 move container to workspace $workspace9
-#bindsym $mod+Shift+0 move container to workspace $workspace10
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
+bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # reload configuration
 bindsym $mod+Shift+c reload
@@ -226,7 +226,7 @@ bindsym $mod+Shift+f exec thunar
 # take screenshot
 bindsym Print exec scrot -e 'mv $f ~/media/screenshots/ && notify-send "screenshot saved in ~/media/screenshots/$f"'
 # take screenshot of current window
-bindsym Control+Print exec scrot -u -e 'mv $f ~/media/screenshots && notify-send "window saved in ~/media /screenshots/$f"'
+bindsym --release Control+Print exec scrot -s -e 'mv $f ~/media/screenshots && notify-send "window saved in ~/media /screenshots/$f"'
 
 #bindsym XF86AudioMicMute exec "amixer set Capture toggle ; killall -s USR1 py3status"
 #bindsym XF86AudioLowerVolume exec "pamixer --decrease 5; killall -s USR1 py3status"
@@ -358,51 +358,12 @@ bindsym $mod+z exec --no-startup-id flash_window
 bindsym $mod+Shift+y exec xdotool click 4
 bindsym $mod+Shift+u exec xdotool click 5
 
-#workspace switcher
-set $exec_i3_groups exec --no-startup-id i3-workspace-groups
-
-# Switch active workspace group
-bindsym $mod+g exec --no-startup-id i3-switch-active-workspace-group
-
-# Assign workspace to a group
-bindsym $mod+Shift+g exec --no-startup-id i3-assign-workspace-to-group
-
-# Select workspace to focus on
-bindsym $mod+t exec --no-startup-id i3-focus-on-workspace
-
-# Move the focused container to another workspace
-bindsym $mod+Shift+t exec --no-startup-id i3-move-to-workspace
-
 # Rename/renumber workspace. Uses Super+Alt+n
 bindsym Mod1+Mod4+n exec --no-startup-id i3-rename-workspace
-
-bindsym $mod+1 $exec_i3_groups workspace-number 1
-bindsym $mod+2 $exec_i3_groups workspace-number 2
-bindsym $mod+3 $exec_i3_groups workspace-number 3
-bindsym $mod+4 $exec_i3_groups workspace-number 4
-bindsym $mod+5 $exec_i3_groups workspace-number 5
-bindsym $mod+6 $exec_i3_groups workspace-number 6
-bindsym $mod+7 $exec_i3_groups workspace-number 7
-bindsym $mod+8 $exec_i3_groups workspace-number 8
-bindsym $mod+9 $exec_i3_groups workspace-number 9
-bindsym $mod+0 $exec_i3_groups workspace-number 10
-
-bindsym $mod+Shift+1 $exec_i3_groups move-to-number 1
-bindsym $mod+Shift+2 $exec_i3_groups move-to-number 2
-bindsym $mod+Shift+3 $exec_i3_groups move-to-number 3
-bindsym $mod+Shift+4 $exec_i3_groups move-to-number 4
-bindsym $mod+Shift+5 $exec_i3_groups move-to-number 5
-bindsym $mod+Shift+6 $exec_i3_groups move-to-number 6
-bindsym $mod+Shift+7 $exec_i3_groups move-to-number 7
-bindsym $mod+Shift+8 $exec_i3_groups move-to-number 8
-bindsym $mod+Shift+9 $exec_i3_groups move-to-number 9
-bindsym $mod+Shift+0 $exec_i3_groups move-to-number 10
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-
-  	strip_workspace_numbers yes
 	status_command i3blocks
 	position top
 	font pango: Awesome 9
