--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,4 +11,4 @@ repos:
   - repo: https://github.com/JohnnyMorganz/StyLua
     rev: v2.0.2
     hooks:
-      - id: stylua # or stylua-system / stylua-github
+      - id: stylua
