--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -56,4 +56,7 @@
 	autoStash = true
 	updateRefs = true
 [pull]
-	rebase = true
+    rebase = true
+[alias]
+    lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all -n 15
+    out = "log @{u}.."
