--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -52,15 +52,7 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+x kill
 
 # lock
-bindsym $mod+Shift+x exec --no-startup-id notify-send locking && sleep 1 && ~/bin/lock -i ~/media/windows_resized.png
-
-# lauch rofi
-bindsym $mod+Shift+d exec rofi -modi run -show run
-
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+Shift+x exec --no-startup-id notify-send locking && sleep 1 && slock
 
 # change focus
 # focus left
@@ -240,18 +232,14 @@ bindsym Print exec scrot -e 'mv $f ~/media/screenshots/ && notify-send "screensh
 # take screenshot of current window
 bindsym --release Control+Print exec scrot -s -e 'mv $f ~/media/screenshots && notify-send "window saved in ~/media /screenshots/$f"'
 
-#bindsym XF86AudioMicMute exec "amixer set Capture toggle ; killall -s USR1 py3status"
-#bindsym XF86AudioLowerVolume exec "pamixer --decrease 5; killall -s USR1 py3status"
-#bindsym XF86AudioMute exec "pamixer --toggle-mute ; killall -s USR1 py3status"
-#bindsym XF86AudioRaiseVolume exec pamixer --increase 5
 # toggle audio
-bindsym XF86AudioMute exec "ponymix toggle && pkill -RTMIN+10 i3blocks"
+bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle && pkill -RTMIN+10 i3blocks"
 # toggle mic
 bindsym XF86AudioMicMute exec "amixer set Capture toggle; pkill -RTMIN+10 i3blocks"
 # lower volume
-bindsym XF86AudioLowerVolume exec "ponymix decrease 5; pkill -RTMIN+10 i3blocks"
+bindsym XF86AudioLowerVolume exec "pactl set-sink-volume @DEFAULT_SINK@ -5% && pkill -RTMIN+10 i3blocks"
 # raise volume
-bindsym XF86AudioRaiseVolume exec "ponymix increase 5; pkill -RTMIN+10 i3blocks"
+bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +5% && pkill -RTMIN+10 i3blocks"
 
 # Screen brightness controls
 # raise brightness
@@ -259,32 +247,20 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 5
 # lower brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5
 
-# suspend
-bindsym $mod+Ctrl+x exec systemctl suspend && i3lock -i ~/media/ubuntu_unity.png
-# hibernate
-bindsym $mod+Ctrl+Shift+x exec systemctl hibernate && i3lock -i ~/media/ubuntu_unity.png
-
 # Touchpad controls
 #bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
 
 # Media player controls
-# play/pause
-bindsym $mod+Ctrl+p exec playerctl play-pause
-bindsym $mod+Ctrl+n exec playerctl next
+bindsym XF86AudioPlay exec playerctl play-pause
 # next song
 bindsym XF86AudioNext exec playerctl next
 # previous song
 bindsym XF86AudioPrev exec playerctl previous
-# mpc play/pause
-bindsym $mod+XF86AudioPlay exec "mpc toggle; killall -s USR1 py3status"
-# mpc next song
-bindsym $mod+XF86AudioNext exec "mpc next; killall -s USR1 py3status"
-# mpc previous song
-bindsym $mod+XF86AudioPrev exec "mpc prev; killall -s USR1 py3status"
 
 # lauch rofi-bookmarks
 bindsym $mod+Shift+b exec marcador rofi
-bindsym $mod+b exec CM_LAUNCHER=rofi clipmenu
+bindsym $mod+b exec clipmenu
+bindsym $mod+y exec rofi -show combi -combi-modes "window" -modes combi
 
 # lauch hotkeys
 bindsym $mod+i exec /home/joaj/bin/hotkeys
@@ -343,7 +319,7 @@ gaps inner 10
 
 #autostart
 exec --no-startup-id nm-applet
-exec_always --no-startup-id xss-lock -- /home/joaj/bin/lock
+exec_always --no-startup-id xss-lock -- slock
 exec --no-startup-id discord
 exec --no-startup-id telegram-desktop
 exec --no-startup-id spotify
@@ -354,6 +330,7 @@ exec_always --no-startup-id picom
 exec_always --no-startup-id clipmenud &
 exec_always --no-startup-id /home/joaj/bin/layout.sh
 exec_always --no-startup-id dunst
+exec --no-startup-id aw-qt
 
 # window colors
 #                       border              background         text      indicator
@@ -365,17 +342,10 @@ client.urgent           $urgent-bg-color  $urgent-bg-color  $text-color  $urgent
 # launch rofi-pass
 bindsym $mod+p exec rofi-pass
 # launch rofi
-bindsym $mod+d exec rofi -modi drun -show drun
-# launch window switcher
-bindsym $mod+y exec rofi -combi-modi window -show combi -modi combi
-# expo
-bindsym $mod+z exec --no-startup-id flash_window
+bindsym $mod+d exec dmenu_run -nb '$bg-color' -sb '$accent' -p 'λ'
 
 bindsym $mod+Shift+y exec xdotool click 4
 bindsym $mod+Shift+u exec xdotool click 5
-
-# Rename/renumber workspace. Uses Super+Alt+n
-bindsym Mod1+Mod4+n exec --no-startup-id i3-rename-workspace
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
