--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,8 +1,35 @@
 [user]
-	email = joao.mc.freitas@ctw.bmwgroup.com
+    email = joao.mc.freitas@ctw.bmwgroup.com
     name = João Freitas
 [core]
-	editor = nvim
+    editor = nvim
     whitespace = trailing-space,space-before-tab
+[column]
+    ui = auto
+[branch]
+    sort = -committerdate
 [apply]
-	whitespace = fix
+    whitespace = fix
+[merge]
+    conflictStyle = zdiff3
+[rerere]
+    enabled = true
+    autoupdated = true
+[push]
+    autoSetupRemote = true
+[diff]
+    algorithm = histogram
+    colorMoved = plain
+    renames = true
+    mnemonicPrefix = true
+[fetch]
+    prune = true
+[rebase]
+    autoSquash = true
+    autoStash = true
+    updateRefs = true
+[pull]
+    rebase = true
+[alias]
+    lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all -n 15
+    out = "log @{u}.."
