--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/JohnnyMorganz/StyLua
-    rev: v2.0.2
-    hooks:
-      - id: stylua
+  #- repo: https://github.com/CppCXY/EmmyLuaCodeStyle
+  #  rev: 1.5.7
+  #  hooks:
+  #    - id: emmyluacodestyle-check
